// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`integration - gen-js envSchemaFilePath 1`] = `
[
  null,
  "// Generated by '@runtime-env/cli'

globalThis.runtimeEnv = {
  "FOO": "inline",
  "BAR": undefined,
}

",
  "",
]
`;

exports[`integration - gen-js globalVariableName 1`] = `
[
  null,
  "// Generated by '@runtime-env/cli'

globalThis.env = {
  "FOO": "inline",
  "BAR": undefined,
}

",
  "",
]
`;

exports[`integration - gen-js optionalEnv 1`] = `
[
  null,
  "// Generated by '@runtime-env/cli'

globalThis.runtimeEnv = {
  "FOO": "inline",
  "BAR": {"BAZ":"baz"},
}

",
  "",
]
`;

exports[`integration - gen-js outputFilePath 1`] = `
[
  null,
  "",
  "",
]
`;

exports[`integration - gen-js outputFilePath 2`] = `
"// Generated by '@runtime-env/cli'

globalThis.runtimeEnv = {
  "FOO": "inline",
  "BAR": undefined,
}
"
`;

exports[`integration - gen-js requiredEnv 1`] = `
[
  null,
  "// Generated by '@runtime-env/cli'

globalThis.runtimeEnv = {
  "FOO": "inline",
  "BAR": undefined,
}

",
  "",
]
`;
